<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutModuleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_moduleCode"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/tv_moduleCode" />

        <TextView
            android:id="@+id/tv_getModuleCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_moduleName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_moduleName" />

        <TextView
            android:id="@+id/tv_getModuleName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_academicYear"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_academicYear" />

        <TextView
            android:id="@+id/tv_getAcademicYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_semester"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_semester" />

        <TextView
            android:id="@+id/tv_getSem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_moduleCredit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_moduleCredit" />

        <TextView
            android:id="@+id/tv_getModuleCredit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_venue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_venue" />

        <TextView
            android:id="@+id/tv_getVenue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btnback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back" />

</LinearLayout>